clutter/clutter-stage.c
@@ -946,7 +946,7 @@ _clutter_stage_queue_event (ClutterStage *stage,
 
       clutter_event_get_coords (event, &event_x, &event_y);
 
-      _clutter_input_device_set_coords (device, sequence, event_x, event_y);
+      _clutter_input_device_set_coords (device, sequence, event_x, event_y, stage);
       _clutter_input_device_set_state (device, event_state);
       _clutter_input_device_set_time (device, event_time);
     }
